2007-06-15  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompile.c: reverted TclEvalObjvInternal and 
	* generic/tclExecute.c: INST_INVOKE to essentially what they were 
	* generic/tclBasic.c:   previous to the commit of 2007-04-03
	[Patch 1693802] and the subsequent optimisations, as they break
	the new trace tests described below.

	* generic/trace.test: added tests 36 to 38 for dynamic trace
	creation and addition. These tests expose a change in dynamics due
	to a recent round of optimisations. The "correct" behaviour is not 
	described in docs nor TIP 62.

2007-06-14  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.decls:   Modif to the internals of TclObjInterpProc
	* generic/tclInt.h:       to reduce stack consumption and improve task
	* generic/tclIntDecls.h:  separation. Changes the interface of
	* generic/tclProc.c:      TclObjInterpProcCore (patching TclOO
	simultaneously).

	* generic/tclProc.c (TclObjInterpProcCore): simplified obj management
	in wrongNumArgs calls.

2007-06-14  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.c:	SetByteCodeFromAny() can no longer return any
	* generic/tclExecute.c:	code other than TCL_OK, so remove code that
	* generic/tclProc.c:	formerly handled exceptional codes.

2007-06-13  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c (TclCompEvalObj): missed update to "there is
	always a valid frame".

	* generic/tclProc.c (TclObjInterpProcCore): call TEBC directly instead
	of going through TclCompEvalObj - no need to check the compilation's
	freshness, this has already been done. This improves speed and should
	also provide some relief to [Bug 1066755].

2007-06-12  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclBasic.c (Tcl_CreateInterp): Turn the [info] command into
	* generic/tclCmdIL.c (TclInitInfoCmd):	 an ensemble, making it easier
	for third-party code to plug into.

	* generic/tclIndexObj.c (Tcl_WrongNumArgs):